<resources>
    <string name="app_name">ClinicaLaLuzApp</string>
    <string name="logo">logo de Clínica La Luz</string>
    <string name="hint_username">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="button_iniciar">Iniciar sesión</string>
    <string name="button_cancel">Cancelar</string>
    <string name="title_activity_paciente">PacienteActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Abraham Lipa Calabilla</string>
    <string name="nav_header_subtitle">abrlipac@upt.pe</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_compartir">Compartir</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_reservar">Reservar cita</string>
    <string name="menu_historial">Historial médico</string>
    <string name="menu_citas">Citas médicas</string>
    <string name="menu_salir">Salir</string>
    <string name="logo_especialidad">logo de la especialidad</string>
    <string name="especialidad_nombre">Nombre</string>
    <string name="especialidad_desc">Descripción</string>
    <string name="menu_ubicanos">Ubícanos</string>
    <string name="button_remember">¿Olvidaste tu contraseña?</string>
    <string name="button_registrar">Regístrate</string>
    <string name="next_button">Siguiente</string>
    <string name="button_inicia">Inicia sesión</string>
    <string name="hint_dni">DNI</string>
    <string name="hint_nombres">Nombres</string>
    <string name="hint_apellidos">Apellidos</string>
    <string name="hint_ciudad">Ciudad</string>
    <string name="hint_celular">Celular</string>
    <string name="hint_email">Email</string>
    <string name="button_enviar">Enviar</string>
    <string name="hint_confirm">Confirma tu contraseña</string>
    <string name="button_guardar">Guardar</string>
    <string name="action_ayuda">¿Necesitas ayuda?</string>
    <string name="action_version">Version</string>
    <string name="button_continuar">Continuar</string>
    <string name="nav_imagen_perfil">imagen de perfil de usuario</string>
    <string name="share_logo">logo de compartir</string>
    <string name="signup_user">Registro de usuario</string>
    <string name="elige">Elige una especialidad</string>
    <string name="elige_fecha">Elige una fecha</string>
    <string name="elige_hora">Elige la hora</string>
    <string name="menu_reservar_cita">Reservar cita</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_password">Ingresa tu nueva contraseña</string>
    <string name="user_data">Datos de usuario</string>
    <string name="contact_data">Datos de contacto</string>
    <string name="personal_data">Datos personales</string>
    <string name="remember_desc">Ingresa tu email para enviarte un enlace para recuperar tu cuenta</string>
    <string name="hint_doc_identidad">Código de Documento de Identidad</string>
    <string name="cancel_button">Cancelar</string>
    <string name="tipo_input_layout">Tipo de documento</string>
    <string name="datos_paciente">Datos de paciente</string>
    <string name="country_input_layout">País</string>
    <string name="city_input_layout">Ciudad</string>
    <string name="select_medic">Elija uno de los médicos disponibles</string>
    <string name="logout_title">Cerrar sesión</string>
    <string name="historial">Historial médico</string>
    <string name="bienvenido">Bienvenido Abraham!</string>
    <string name="title_activity_primary">PrimaryActivity</string>
    <string name="action_settings">Settings</string>
    <string name="home_tv_bienvenido">Bienvenido!</string>
    <string name="home_tv_pregunta">¿Qué es lo que quiere hacer?</string>
    <string name="home_btn_reservar">Reservar cita</string>
    <string name="fl_tv_login">Login</string>
    <string name="fl_iv_logo">logo de la empresa</string>
    <string name="fl_et_email">Email</string>
    <string name="fl_et_contrasena">Contraseña</string>
    <string name="fl_b_login">INGRESAR</string>
    <string name="fl_tv_olvido">Has olvidado tu contraseña?</string>
    <string name="fl_tv_registrarse">No tienes una cuenta?\n<b>Registrarse Aquí</b></string>
    <string name="fe_iv_imagen">imagen de especialidad</string>
    <string name="fe_mb_elegir">Elegir imagen</string>
    <string name="fe_mb_registrar">Registrar</string>
    <string name="fe_til_nombre">Nombre</string>
    <string name="fe_til_desc">Descripción</string>
    <string name="menu_especialidad">Registrar especialidad</string>
    <string name="fl_til_como">Iniciar sesión como</string>

    <string name="db_collection_pacientes">pacientes</string>
    <string name="db_collection_medicos">medicos</string>
    <string name="db_collection_administradores">administradores</string>
    <string name="menu_reg_especialidad">Registrar especialidad</string>
    <string name="menu_reg_medico">Registrar médico</string>

    <string name="nav_reg_especialidad">Registrar especialidad</string>
    <string name="nav_reg_medico">Registrar médico</string>
    <string name="nav_share">Comparte</string>
    <string name="nav_communicate">Comunícate</string>
    <string name="nh_tv_nombre_sample">Abraham Lipa Calabilla</string>
    <string name="nh_tv_email_sample">abrlipac@upt.pe</string>
    <string name="nh_iv_foto">foto de perfil</string>

    <string name="nav_logout">Cerrar sesión</string>
    <string name="nav_location">Ubícanos</string>
    <string name="nav_home">Inicio</string>
    <string name="nav_call">Llámanos</string>
    <string name="nav_version">Versión</string>
    <string name="fha_tv_title">Bienvenido administrador!</string>
    <string name="fre_tv_titulo">Registrar especialidad</string>
    <string name="frm_tv_title">Registrar médico</string>
    <string name="dw_i_opciones">Opciones</string>
    <string name="nav_perfil">Perfil</string>
    <string name="nav_historial_medico">Historial médico</string>
    <string name="nav_gestionar_citas">Gestionar citas</string>
    <string name="nav_reservar_cita">Reservar cita</string>
    <string name="fhp_tv_title">Bienvenido paciente!</string>
    <string name="frc_tv_title">Reservar cita</string>
    <string name="fgc_tv_title">Gestionar citas</string>
    <string name="fhm_tv_title">Historial médico</string>
    <string name="fpp_tv_title">Perfil</string>
</resources>