<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home_paciente"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_reservar_cita"
        android:icon="@drawable/ic_add"
        android:title="@string/nav_reservar_cita" />
    <item
        android:id="@+id/nav_gestionar_citas"
        android:icon="@drawable/ic_medical"
        android:title="@string/nav_gestionar_citas" />
    <item
        android:id="@+id/nav_historial_medico"
        android:icon="@drawable/ic_list"
        android:title="@string/nav_historial_medico" />
    <item
        android:id="@+id/nav_perfil_paciente"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_perfil" />
</menu>