<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/dw_i_opciones"
        android:title="@string/dw_i_opciones">
        <menu/>
    </item>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_clinica"
                android:icon="@drawable/ic_baseline"
                android:title="Clinica" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/nav_share" />

        </menu>
    </item>

    <item
        android:id="@+id/nav_version"
        android:icon="@drawable/ic_version"
        android:title="@string/nav_version" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/nav_logout" />

</menu>