<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorfondo"
    tools:context=".ui.start.DatosPacienteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">

        <ImageView
            android:layout_width="192dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:background="@color/white"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:text="@string/signup_user"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/datos_paciente"
            android:textColor="@color/white" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/country_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/country_input_layout">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/country_actv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/city_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:enabled="false"
            android:hint="@string/city_input_layout">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/city_actv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_next_button"
            style="@style/Widget.CLL.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_cancel_button"
            style="@style/Widget.CLL.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cancel_button"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>
</ScrollView>