<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorfondo"
    tools:context=".StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">

        <ImageView
            android:layout_width="192dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:background="@color/white"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:text="@string/signup_user"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/user_data"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input"
            style="@style/Widget.CLL.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="16dp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textStyle="italic" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            style="@style/Widget.CLL.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/hint_password"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="16dp"
                android:inputType="textPassword"
                android:textStyle="italic" />
        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_text_input"
            style="@style/Widget.CLL.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirm"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="16dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textStyle="italic" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_register_button"
            style="@style/Widget.CLL.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:text="@string/next_button"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_cancel_button"
            style="@style/Widget.CLL.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/aclonica"
            android:text="@string/button_inicia"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>