<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_marginTop="4dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@color/bgAzul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_marginLeft="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp">

            <ImageView
                android:id="@+id/especialidad_imagen"
                android:layout_width="86dp"
                android:layout_height="86dp"

                android:scaleType="centerCrop"
                android:contentDescription="@string/logo_especialidad" />
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/especialidad_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/especialidad_nombre"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:fontFamily="@font/atma_medium"
                    android:textSize="20sp"
                    android:textAppearance="?attr/textAppearanceSubtitle2" />

                <TextView
                    android:id="@+id/especialidad_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/especialidad_desc"
                    android:textStyle="bold"
                    android:fontFamily="@font/atma_medium"
                    android:textColor="@color/white"
                    android:textAppearance="?attr/textAppearanceBody2" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>